--- a/app/index.html
+++ b/app/index.html
@@ -7,5 +7,5 @@
   </head>
   <body>
     <div id="app">React Not Rendering</div>
-  <script type="text/javascript" src="index_bundle.js"></script></body>
+  </body>
 </html>
